--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "nodeapps-express",
-  "subdomain": "http://localhost:8080",
   "author": {
     "name": "Nodejitsu Inc.",
     "email": "support@nodejitsu.com"
@@ -10,13 +9,13 @@
     "start": "node express.js"
   },
   "engines": {
-    "node": "0.8.x"
-  }
+    "node": "0.10.25"
+  },
   "dependencies": {
     "express": "4.0.x",
     "jade": "*",
 	"body-parser": "*",
-	"mongo-skin": "*",
+	"mongoskin": "*",
 	"node-mailer": "*",
 	"underscore": "*"
   },
