--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "nodeapps-express",
+  "name": "apps-express",
   "author": {
     "name": "Nodejitsu Inc.",
     "email": "support@nodejitsu.com"
   },
-  "subdomain": "codefish",
+  "subdomain": "codefishing",
   "version": "0.1.3",
   "scripts": {
     "start": "node express.js"
@@ -19,10 +19,5 @@
 	"mongoskin": "*",
 	"node-mailer": "*",
 	"underscore": "*"
-  },
-  "analyze": false,
-  "description": "[http://expressjs.com](http://express.js.com)",
-  "dist": {
-    "shasum": "10e7ea0532d86a143edcf6959b73e1516b715d60"
   }
 }
