--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "name": "Nodejitsu Inc.",
     "email": "support@nodejitsu.com"
   },
-  "subdomain": "codefishing",
+  "subdomain": "codefish",
   "version": "0.1.3",
   "scripts": {
     "start": "node express.js"
